[package]
name = "stache"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stache"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-associated-token-account = "1.1.2"
#clockwork-sdk = { version = "2.0.1" }
clockwork-sdk = { version = "1.4.2" }
keychain = { path = "../../../keychain/programs/keychain", features = ["cpi"] }

